syntax = "proto3";

package healer;

service Healer {
    rpc StartHealing (StartHealingRequest) returns (StartHealingResponse) {}
    rpc StopHealing (StopHealingRequest) returns (StopHealingResponse) {}
    rpc HealSelective (HealSelectiveRequest) returns (HealSelectiveResponse) {}
    rpc GetHealingReport (GetHealingReportRequest) returns (GetHealingReportResponse) {}
    rpc PerformRollingUpdate (UpdateRequest) returns (UpdateResponse) {}
    rpc GetMetrics(Empty) returns (MetricsResponse);
}

message StartHealingRequest {}

message StartHealingResponse {
    string message = 1;
}

message StopHealingRequest {}

message StopHealingResponse {
    string message = 1;
}

message HealSelectiveRequest {
    repeated string container_ids = 1;
}

message HealSelectiveResponse {
    string message = 1;
}

message GetHealingReportRequest {}

message GetHealingReportResponse {
    repeated HealingReport healing_events = 1;
}

message UpdateRequest {
    repeated string container_ids = 1;
}

message UpdateResponse {
    string message = 1;
}

message HealingReport {
    string container_id = 1;
    string timestamp = 2;  // Timestamp as a string in RFC 3339 format
    string event = 3;
}

message Empty {}

message MetricsResponse {
    string metrics = 1;
}